# AIagenti01

./: .env.example  .gitignore  CONFIG_OVERVIEW.md  Makefile  QUICKSTART.md  Readme.md  SETUP_README.md  check_config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_env.bat  setup_env.ps1  setup_env.sh  tools_ollama_whisper.py  ucebnice10.json
